
Bug Fixes
---------------------

* SOLR-16638: Fix Http2SolrClient's exception message when serverBaseUrl is null (Alex Deparvu via Kevin Risden)

* SOLR-16721: Java version detection fails when `_JAVA_OPTIONS` is set (janhoy, Ruoyu Zhong, Andy Webb)

* SOLR-16723: Http2SolrClient should not use Apache Http client classes (Kevin Risden)

Dependency Upgrades
---------------------
* PR#1494: Upgrade forbiddenapis to 3.5 (Uwe Schindler)

Other Changes
---------------------

* SOLR-16704: Add simple search benchmark to benchmark module (Tomás Fernández Löbbe)

* SOLR-16709: Update Solr's internal use of Solr Client Builders to use TimeUnit parameter for time specific builder methods. (Eric Pugh)

* SOLR-16713: Replace Guava usages with pure Java (Kevin Risden)

* SOLR-16716: Replace commons-io usages with pure Java (Kevin Risden)

* SOLR-16715: Replace new HashMap(int) and new HashSet(int) with CollectionUtil.newHashMap / CollectionUtil.newHashSet (Kevin Risden)

==================  9.2.0 ==================

New Features
---------------------

* SOLR-16435: Add Request timeout to Http2SolrClient (Tomás Fernández Löbbe)

* SOLR-16500: Added --enable-preview for JDK 19 to enable MemorySegment support in MMapDirectory (Kevin Risden)

* SOLR-16496: QueryElevationComponent now supports fq exclusions (Rudi Seitz via David Smiley)

* SOLR-16409: Admin UI - Expose all highlighting parameters in the Query UI (Jeanie Lam via Eric Pugh)

* SOLR-16532: New OpenTelemetry (OTEL) module with OTLP/gRPC trace exporter. See ref.guide. (janhoy, David Smiley)

* SOLR-16596: Learning To Rank - Added support for null feature values in multiple additive trees models (Anna Ruggero via Alessandro Benedetti)

* SOLR-16608: Ability to compress state.json in Zookeeper (Justin Sweeney via noble)

* SOLR-16646: New function query operator isnan to verify if value is NaN (Gabriel Magno via Kevin Risden)
